[project]
name = "pythonDataScienceLesson-3"
version = "0.1.0"
description = "This lesson will go over Decision Trees and Cross Validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dtreeviz>=2.2.2",
    "fastapi>=0.116.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
